fix entry view alignment on events page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -283,7 +283,7 @@ footer a:hover {
   @media (min-width: 768px) {
     grid-template-columns: 3fr auto 6fr;
     grid-template-areas: "name time route";
-    align-items: center;
+    align-items: baseline;
   }
 }
 
